--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,7 +7,7 @@
 
     <link
       rel="stylesheet"
-      href="./assets/styles/css-bootstrap/bootstrap.min.css"
+      href="../assets/styles/css-bootstrap/bootstrap.min.css"
     />
 
     <!-- <link
@@ -23,9 +23,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
 
-    <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="../assets/styles/styles.css" />
 
-    <title>ShopiCaC - Inicio 🏪</title>
+    <title>ShopiCaC - Contacto 📧</title>
   </head>
 
   <body>
@@ -36,7 +36,7 @@
       >
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
-            <img src="./assets/img/logo ShopiCaC.png" alt="Logo Amazing Events" width="70" />
+            <img src="../assets/img/logo ShopiCaC.png" alt="Logo ShopiCaC" width="70" />
             <figcaption class="text-white text-center">ShopiCaC</figcaption>
           </figure>
 
@@ -59,19 +59,19 @@
             <ul class="navbar-nav barra-navegacion ">
 
               <li class="nav-item btn-width border-2">
-                <a class="nav-link active" href="#">INICIO</a>
+                <a class="nav-link" href="../index.html">INICIO</a>
               </li>
 
               <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="./pages/products.html">PRODUCTOS</a>
+                <a class="nav-link" href="./products.html">PRODUCTOS</a>
               </li>
 
               <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="./pages/contact.html">CONTACTO</a>
+                <a class="nav-link active" href="#">CONTACTO</a>
               </li>
 
               <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="./pages/login.html">LOGIN</a>
+                <a class="nav-link" href="./login.html">LOGIN</a>
               </li>
             </ul>
           </div>
@@ -178,17 +178,18 @@
       </div>
       <!-- theme selector -->
 
-      <div class="hero">
-        <figure class="hero-img">
-          <img src="./assets/img/ShopiCaC.png" alt="" />
-        </figure>
+      <div class="productos">
+        <h1>Agregar: </h1>
+        <ol>
+          <li>Formulario de contacto según requerimientos del tp</li>
+        </ol>
       </div>
     </main>
 
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
-    <script src="./assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="../assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
 
-    <script src="./assets/js/theme.js"></script>
+    <script src="../assets/js/theme.js"></script>
   </body>
 </html>
