--- a/index.html
+++ b/index.html
@@ -29,14 +29,17 @@
   </head>
 
   <body>
-
     <header>
       <nav
         class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
       >
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
-            <img src="./assets/img/logo ShopiCaC.png" alt="Logo Amazing Events" width="70" />
+            <img
+              src="./assets/img/logo ShopiCaC.png"
+              alt="Logo Amazing Events"
+              width="70"
+            />
             <figcaption class="text-white text-center">ShopiCaC</figcaption>
           </figure>
 
@@ -56,8 +59,7 @@
           <div class="collapse navbar-collapse" id="bdNavbar">
             <hr class="d-md-none text-white-50" />
 
-            <ul class="navbar-nav barra-navegacion ">
-
+            <ul class="navbar-nav barra-navegacion">
               <li class="nav-item btn-width border-2">
                 <a class="nav-link active" href="#">INICIO</a>
               </li>
@@ -78,7 +80,6 @@
         </div>
       </nav>
     </header>
-
 
     <main>
       <!-- theme selector -->
@@ -184,6 +185,33 @@
         </figure>
       </div>
     </main>
+
+    <!-- footer 1 -->
+
+    <footer
+      id="footer"
+      class="fixed-bottom footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+    >
+      <div class="container">
+        <footer id="footer" class="py-3 my-4">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Productos</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Contacto</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Login</a>
+            </li>
+          </ul>
+          <p class="text-center text-white-50">© 2024 Company, Inc</p>
+        </footer>
+      </div>
+    </footer>
 
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
