--- a/pages/products.html
+++ b/pages/products.html
@@ -28,7 +28,7 @@
     <title>ShopiCaC - Productos 👕</title>
   </head>
 
-  <body>
+  <body class="container productos">
     <header>
       <nav
         class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
@@ -179,7 +179,40 @@
       </div>
       <!-- theme selector -->
 
-      <div class="productos">
+      <div>
+        <img
+          class="banner"
+          src="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/banner%202.jpg?alt=media&token=e43bdd81-bb94-42cc-a92f-59fd78000121"
+          alt=""
+        />
+
+        <form>
+          <div class="input-group my-3">
+            <span class="input-group-text rounded-start-pill" id="basic-addon1">
+              <i class="fa fa-search" aria-hidden="true"></i>
+            </span>
+            <input
+              type="text"
+              class="form-control rounded-end-pill"
+              placeholder="Buscar"
+              aria-label="buscar"
+              aria-describedby="basic-addon1"
+            />
+          </div>
+
+          <input type="checkbox" class="checkbox-input" id="categoria-1" />
+          <label for="categoria-1" class="checkbox-label">CATEGORIA 1</label>
+
+          <input type="checkbox" class="checkbox-input" id="categoria-2" />
+          <label for="categoria-2" class="checkbox-label">CATEGORIA 2</label>
+
+          <input type="checkbox" class="checkbox-input" id="categoria-3" />
+          <label for="categoria-3" class="checkbox-label">CATEGORIA 3</label>
+
+          <input type="checkbox" class="checkbox-input" id="categoria-4" />
+          <label for="categoria-4" class="checkbox-label">CATEGORIA 4</label>
+        </form>
+
         <h1>Agregar:</h1>
         <ol>
           <li>Input busqueda (buscar mientras se escribe)</li>
@@ -199,8 +232,9 @@
         </ol>
       </div>
     </main>
+
     <!-- footer 1 -->
-    <footer
+    <!-- <footer
       id="footer"
       class="fixed-bottom footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
     >
@@ -223,7 +257,7 @@
           <p class="text-center text-white-50">© 2024 Company, Inc</p>
         </footer>
       </div>
-    </footer>
+    </footer> -->
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="../assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
