Commit compras info
Commit compras info

--- a/index.html
+++ b/index.html
@@ -206,13 +206,48 @@
                 />
               </div>
             </div>
+            <button id="prevBtn"><i class="fas fa-chevron-left"></i></button>
+            <button id="nextBtn"><i class="fas fa-chevron-right"></i></button>
           </div>
-          <button id="prevBtn">Previous</button>
-          <button id="nextBtn">Next</button>
-          <button id="prevBtn">Previous</button>
-          <button id="nextBtn">Next</button>
         </section>
       </div>
+
+      <!-- SECCION INFO sin bootstrap-->
+      <section class="compras-info" style="background-color: #f5f5f5">
+        <div class="compras-info__container">
+          <div class="compras-info__items">
+            <div class="compras-info__item" style="color: #000000">
+              <p class="compras__item-icono">
+                <i class="fas fa-truck"></i>
+              </p>
+              <p class="compras__item-titulo">ENVÍOS A TODO EL PAIS</p>
+              <p class="compras__item-subtitulo">
+                Despachamos dentro de las 24 hs
+              </p>
+            </div>
+            <div class="compras-info__item" style="color: #000000">
+              <p class="compras__item-icono">
+                <i class="far fa-credit-card"></i>
+              </p>
+              <p class="compras__item-titulo">3 CUOTAS SIN INTERES</p>
+              <p class="compras__item-subtitulo">
+                Con todas las tarjetas bancarizadas
+              </p>
+            </div>
+            <div class="compras-info__item" style="color: #000000">
+              <p class="compras__item-icono">
+                <i class="compras__icono fab fa-whatsapp"></i>
+              </p>
+              <p class="compras__item-titulo">TENES DUDAS?</p>
+              <p class="compras__item-subtitulo">
+                Escribinos! Atención las 24 hs del dia
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- FIN SECCION INFO -->
     </main>
 
     <!-- footer 1 -->
