--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
       </div>
 
       <!-- SECCION INFO sin bootstrap-->
-      <section class="compras-info" style="background-color: #f5f5f5">
+      <section class="compras-info">
         <div class="compras-info__container">
           <div class="compras-info__items">
-            <div class="compras-info__item" style="color: #000000">
+            <div class="compras-info__item">
               <p class="compras__item-icono">
                 <i class="fas fa-truck"></i>
               </p>
@@ -225,7 +225,7 @@
                 Despachamos dentro de las 24 hs
               </p>
             </div>
-            <div class="compras-info__item" style="color: #000000">
+            <div class="compras-info__item">
               <p class="compras__item-icono">
                 <i class="far fa-credit-card"></i>
               </p>
@@ -234,7 +234,7 @@
                 Con todas las tarjetas bancarizadas
               </p>
             </div>
-            <div class="compras-info__item" style="color: #000000">
+            <div class="compras-info__item">
               <p class="compras__item-icono">
                 <i class="compras__icono fab fa-whatsapp"></i>
               </p>
@@ -248,6 +248,81 @@
       </section>
 
       <!-- FIN SECCION INFO -->
+
+      <!-- SECCION DE PRODUCTOS -->
+      <section class="todos-los-productos">
+        <!--PRODUCTOS 1-->
+        <div class="producto" id="producto-1">
+          <div class="producto-info">
+            <h3 class="producto-titulo">
+              <a href="/pages/products.html" previewlistener="true">
+                Electronica
+              </a>
+            </h3>
+            <img
+              src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg"
+              alt="Acer SB220Q bi 21.5 inches Full HD (1920 x 1080) IPS Ultra-Thin"
+            />
+            <a class="producto-btn" href="/pages/products.html">
+              Ver productos
+            </a>
+          </div>
+        </div>
+
+        <!--PRODUCTOS 2-->
+        <div class="producto" id="producto-2">
+          <div class="producto-info">
+            <h3 class="producto-titulo">
+              <a href="/pages/products.html" previewlistener="true">
+                Accesorios
+              </a>
+            </h3>
+            <img
+              src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
+              alt="Ropa Masculina"
+            />
+            <a class="producto-btn" href="/pages/products.html">
+              Ver productos
+            </a>
+          </div>
+        </div>
+
+        <!--PRODUCTOS 3-->
+        <div class="producto" id="producto-3">
+          <div class="producto-info">
+            <h3 class="producto-titulo">
+              <a href="/pages/products.html" previewlistener="true"
+                >Ropa de hombre
+              </a>
+            </h3>
+            <img
+              src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
+              alt="Mens Cotton Jacket"
+            />
+            <a class="producto-btn" href="/pages/products.html">
+              Ver productos
+            </a>
+          </div>
+        </div>
+
+        <!--PRODUCTOS 4-->
+        <div class="producto" id="producto-4">
+          <div class="producto-info">
+            <h3 class="producto-titulo">
+              <a href="/pages/products.html" previewlistener="true">
+                Ropa de mujer
+              </a>
+            </h3>
+            <img
+              src="https://fakestoreapi.com/img/51eg55uWmdL._AC_UX679_.jpg"
+              alt="Opna Women's Short Sleeve Moisture"
+            />
+            <a class="producto-btn" href="/pages/products.html">
+              Ver productos
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- footer 1 -->
