--- a/index.html
+++ b/index.html
@@ -325,14 +325,17 @@
       </section>
     </main>
 
-    <!-- footer 1 -->
+    <!-- FIN PRODUCTOS -->
+
+    <!-- footer 1 con bootstrap -->
 
     <footer
       id="footer"
-      class="fixed-bottom footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
     >
-      <div class="container">
-        <footer id="footer" class="py-3 my-4">
+      <div class="container footer-container">
+        <div class="py-2">
+          <!-- Adjusted padding -->
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item btn-width border-2">
               <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
@@ -347,8 +350,8 @@
               <a href="#" class="nav-link px-2 text-white-50">Login</a>
             </li>
           </ul>
-          <p class="text-center text-white-50">© 2024 Company, Inc</p>
-        </footer>
+          <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
+        </div>
       </div>
     </footer>
 
