Agrego grid + correccion de estilos

--- a/pages/products.html
+++ b/pages/products.html
@@ -183,18 +183,18 @@
       </div>
       <!-- theme selector -->
 
-      <div>
         <img
           class="banner"
           src="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/banner%202.jpg?alt=media&token=e43bdd81-bb94-42cc-a92f-59fd78000121"
           alt="banner"
         />
 
-        <form>
-          <div class="input-group my-3">
+        <form class="filtros bg-gradient bg-opacity-75 bg-blur p-3">
+          <div class="input-group mb-2 w-75">
             <span class="input-group-text rounded-start-pill" id="basic-addon1">
               <i class="fa fa-search" aria-hidden="true"></i>
             </span>
+
             <input
               type="text"
               class="form-control rounded-end-pill"
@@ -209,12 +209,11 @@
 
         <h2>Todos nuestros Productos</h2>
         <article id="cards"></article>
-      </div>
     </main>
 
     <!-- footer 1 -->
 
-    <!--     
+        
     <footer
       id="footer"
       class="fixed-bottom footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
@@ -238,7 +237,7 @@
           <p class="text-center text-white-50">© 2024 Company, Inc</p>
         </footer>
       </div>
-    </footer> -->
+    </footer>
 
     <script type="module" src="../assets/js/productos.js"></script>
     <script src="../assets/js/theme.js"></script>
