--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="auto">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Bootstrap -->
 
     <link
       rel="stylesheet"
       href="./assets/styles/css-bootstrap/bootstrap.min.css"
-    />
+    >
 
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -21,9 +21,9 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
 
-    <link rel="stylesheet" href="./assets/styles/styles.css" />
+    <link rel="stylesheet" href="./assets/styles/styles.css" >
 
     <title>ShopiCaC - Inicio 🏪</title>
   </head>
@@ -36,10 +36,10 @@
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
-              src="./assets/img/logo ShopiCaC.png"
-              alt="Logo Amazing Events"
+              src="./assets/img/logo_ShopiCaC.png"
+              alt="shopicac logo"
               width="70"
-            />
+            >
             <figcaption class="text-white text-center">ShopiCaC</figcaption>
           </figure>
 
@@ -57,7 +57,7 @@
 
           <!-- nav -->
           <div class="collapse navbar-collapse" id="bdNavbar">
-            <hr class="d-md-none text-white-50" />
+            <hr class="d-md-none text-white-50" >
 
             <ul class="navbar-nav barra-navegacion">
               <li class="nav-item btn-width border-2">
@@ -181,7 +181,7 @@
 
       <div class="hero">
         <figure class="hero-img">
-          <img src="./assets/img/ShopiCaC.png" alt="" />
+          <img src="./assets/img/ShopiCaC.png" alt="" >
         </figure>
       </div>
     </main>
