se agrega boton scroll arriba
se agrega boton scroll arriba

--- a/index.html
+++ b/index.html
@@ -82,6 +82,11 @@
     </header>
 
     <main>
+      <!-- boton ir arriba -->
+      <button class="btnScrollUp">
+        <i class="fas fa-chevron-up"><a href="#header"></a></i>
+      </button>
+
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -326,7 +331,6 @@
     </main>
 
     <!-- FIN PRODUCTOS -->
-
     <!-- footer 1 con bootstrap -->
 
     <footer
@@ -335,7 +339,6 @@
     >
       <div class="container footer-container">
         <div class="py-2">
-          <!-- Adjusted padding -->
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item btn-width border-2">
               <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
@@ -354,11 +357,10 @@
         </div>
       </div>
     </footer>
-
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="./assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
-
+    <script src="./assets/js/btnArriba.js"></script>
     <script src="./assets/js/theme.js"></script>
     <script src="./assets/js/diapositivas.js"></script>
   </body>
