--- a/pages/contact.html
+++ b/pages/contact.html
@@ -71,6 +71,7 @@
 
 
   <main>
+    
     <!-- theme selector -->
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
       <symbol id="check2" viewBox="0 0 16 16">
@@ -211,6 +212,32 @@
     </div>
   </main>
 
+<!-- footer 1 con bootstrap -->
+
+<footer
+id="footer"
+class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+>
+<div class="container footer-container">
+  <div class="py-2">
+    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+      <li class="nav-item btn-width border-2">
+        <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
+      </li>
+      <li class="nav-item btn-width border-2">
+        <a href="#" class="nav-link px-2 text-white-50">Productos</a>
+      </li>
+      <li class="nav-item btn-width border-2">
+        <a href="#" class="nav-link px-2 text-white-50">Contacto</a>
+      </li>
+      <li class="nav-item btn-width border-2">
+        <a href="#" class="nav-link px-2 text-white-50">Login</a>
+      </li>
+    </ul>
+    <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
+  </div>
+</div>
+</footer>
   <!-- JS Bootstrap -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
   <script src="../assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
