--- a/pages/detail.html
+++ b/pages/detail.html
@@ -29,14 +29,17 @@
   </head>
 
   <body>
-
     <header>
       <nav
         class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
       >
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
-            <img src="../assets/img/logo ShopiCaC.png" alt="Logo ShopiCaC" width="70" />
+            <img
+              src="../assets/img/logo ShopiCaC.png"
+              alt="Logo ShopiCaC"
+              width="70"
+            />
             <figcaption class="text-white text-center">ShopiCaC</figcaption>
           </figure>
 
@@ -56,8 +59,7 @@
           <div class="collapse navbar-collapse" id="bdNavbar">
             <hr class="d-md-none text-white-50" />
 
-            <ul class="navbar-nav barra-navegacion ">
-
+            <ul class="navbar-nav barra-navegacion">
               <li class="nav-item btn-width border-2">
                 <a class="nav-link" href="../index.html">INICIO</a>
               </li>
@@ -79,8 +81,11 @@
       </nav>
     </header>
 
-
     <main>
+      <!-- boton ir arriba -->
+      <button id="btnScrollUp">
+        <i class="fas fa-chevron-up"><a href="#header"></a></i>
+      </button>
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -179,7 +184,7 @@
       <!-- theme selector -->
 
       <div class="productos">
-        <h1>Agregar: </h1>
+        <h1>Agregar:</h1>
         <ol>
           <li>Card con todos los detales del producto</li>
           <li>Boton de compra</li>
@@ -187,7 +192,32 @@
         </ol>
       </div>
     </main>
+    <!-- footer 1 con bootstrap -->
 
+    <footer
+      id="footer"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+    >
+      <div class="container footer-container">
+        <div class="py-2">
+          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Productos</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Contacto</a>
+            </li>
+            <li class="nav-item btn-width border-2">
+              <a href="#" class="nav-link px-2 text-white-50">Login</a>
+            </li>
+          </ul>
+          <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
+        </div>
+      </div>
+    </footer>
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
     <script src="../assets/js/js-bootstrap/bootstrap.bundle.min.js"></script>
