--- a/pages/products.html
+++ b/pages/products.html
@@ -32,7 +32,7 @@
     <title>ShopiCaC - Productos 👕</title>
   </head>
 
-  <body class="container productos">
+  <body class="productos">
     <header>
       <nav
         class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
@@ -85,7 +85,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="container">
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -183,43 +183,43 @@
       </div>
       <!-- theme selector -->
 
-        <img
-          class="banner"
-          src="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/banner%202.jpg?alt=media&token=e43bdd81-bb94-42cc-a92f-59fd78000121"
-          alt="banner"
-        />
+      <img
+        class="banner"
+        src="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/banner%202.jpg?alt=media&token=e43bdd81-bb94-42cc-a92f-59fd78000121"
+        alt="banner"
+      />
 
-        <form class="filtros bg-gradient bg-opacity-75 bg-blur p-3">
-          <div class="input-group mb-2 w-75">
-            <span class="input-group-text rounded-start-pill" id="basic-addon1">
-              <i class="fa fa-search" aria-hidden="true"></i>
-            </span>
+      <form class="filtros bg-gradient bg-opacity-75 bg-blur p-3">
+        <div class="input-group mb-2 w-75">
+          <span class="input-group-text rounded-start-pill" id="basic-addon1">
+            <i class="fa fa-search" aria-hidden="true"></i>
+          </span>
 
-            <input
-              type="text"
-              class="form-control rounded-end-pill"
-              placeholder="buscar"
-              aria-label="buscar"
-              aria-describedby="basic-addon1"
-            />
-          </div>
+          <input
+            type="text"
+            class="form-control rounded-end-pill"
+            placeholder="buscar"
+            aria-label="buscar"
+            aria-describedby="basic-addon1"
+          />
+        </div>
 
-          <fieldset id="checkboxes"></fieldset>
-        </form>
+        <fieldset id="checkboxes"></fieldset>
+      </form>
 
-        <h2>Todos nuestros Productos</h2>
-        <article id="cards"></article>
+      <h2>Todos nuestros Productos</h2>
+      <article id="cards"></article>
     </main>
 
     <!-- footer 1 -->
 
-        
     <footer
       id="footer"
-      class="fixed-bottom footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
     >
-      <div class="container">
-        <footer id="footer" class="py-3 my-4">
+      <div class="container footer-container">
+        <div class="py-2">
+          <!-- Adjusted padding -->
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item btn-width border-2">
               <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
@@ -234,8 +234,8 @@
               <a href="#" class="nav-link px-2 text-white-50">Login</a>
             </li>
           </ul>
-          <p class="text-center text-white-50">© 2024 Company, Inc</p>
-        </footer>
+          <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
+        </div>
       </div>
     </footer>
 
