--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <main>
       <!-- boton ir arriba -->
       <button class="btnScrollUp">
-        <i class="fas fa-chevron-up"><a href="#header"></a></i>
+        <a href="#header"><i class="fas fa-chevron-up btnArriba"></i></a>
       </button>
 
       <!-- theme selector -->
@@ -217,7 +217,7 @@
         </section>
       </div>
 
-      <!-- SECCION INFO sin bootstrap-->
+      <!-- SECCION INFO -->
       <section class="compras-info">
         <div class="compras-info__container">
           <div class="compras-info__items">
@@ -260,9 +260,7 @@
         <div class="producto" id="producto-1">
           <div class="producto-info">
             <h3 class="producto-titulo">
-              <a href="/pages/products.html" previewlistener="true">
-                Electronica
-              </a>
+              <a href="/pages/products.html"> Electronica </a>
             </h3>
             <img
               src="https://fakestoreapi.com/img/81QpkIctqPL._AC_SX679_.jpg"
@@ -278,9 +276,7 @@
         <div class="producto" id="producto-2">
           <div class="producto-info">
             <h3 class="producto-titulo">
-              <a href="/pages/products.html" previewlistener="true">
-                Accesorios
-              </a>
+              <a href="/pages/products.html"> Accesorios </a>
             </h3>
             <img
               src="https://fakestoreapi.com/img/81fPKd-2AYL._AC_SL1500_.jpg"
@@ -296,9 +292,7 @@
         <div class="producto" id="producto-3">
           <div class="producto-info">
             <h3 class="producto-titulo">
-              <a href="/pages/products.html" previewlistener="true"
-                >Ropa de hombre
-              </a>
+              <a href="/pages/products.html">Ropa de hombre </a>
             </h3>
             <img
               src="https://fakestoreapi.com/img/71li-ujtlUL._AC_UX679_.jpg"
@@ -314,9 +308,7 @@
         <div class="producto" id="producto-4">
           <div class="producto-info">
             <h3 class="producto-titulo">
-              <a href="/pages/products.html" previewlistener="true">
-                Ropa de mujer
-              </a>
+              <a href="/pages/products.html"> Ropa de mujer </a>
             </h3>
             <img
               src="https://fakestoreapi.com/img/51eg55uWmdL._AC_UX679_.jpg"
