--- a/pages/products.html
+++ b/pages/products.html
@@ -87,7 +87,7 @@
     <main>
       <!-- boton ir arriba -->
       <button class="btnScrollUp">
-        <i class="fas fa-chevron-up"><a href="#header"></a></i>
+        <a href="#header"><i class="fas fa-chevron-up btnArriba"></i></a>
       </button>
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
