--- a/pages/login.html
+++ b/pages/login.html
@@ -9,13 +9,15 @@
       rel="stylesheet"
       href="../assets/styles/css-bootstrap/bootstrap.min.css"
     />
-
-    <!-- <link
+    <link rel="stylesheet" href="../assets/styles/login.css" />
+    <!--
+      <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
-    /> -->
+    />
+    -->
 
     <!-- Iconos de Bootrap -->
     <link
@@ -177,13 +179,41 @@
           </li>
         </ul>
       </div>
+
       <!-- theme selector -->
 
-      <div class="productos">
-        <h1>Agregar:</h1>
-        <ol>
-          <li>Un login</li>
-        </ol>
+      <div class="form-contenedor">
+        <form action="" method="POST" target="">
+          <h2>Iniciar sesión</h2>
+
+          <div class="form">
+            <input
+              type="text"
+              class="formu-input"
+              name="usuario"
+              placeholder="Usuario"
+            />
+          </div>
+          <div class="form">
+            <input
+              type="text"
+              class="formu-input"
+              name="contrasena"
+              placeholder="Contraseña"
+            />
+          </div>
+
+          <div class="olvido-contrasena">
+            <label
+              ><input type="checkbox" class="checkbox-input" /> Recordar</label
+            ><a href="#">Olvidó la Contraseña?</a>
+          </div>
+
+          <button type="submit" class="form-button">Iniciar sesión</button>
+          <div class="registro-link">
+            <p>No tiene cuenta? <a href="#">Crear cuenta</a></p>
+          </div>
+        </form>
       </div>
     </main>
     <!-- footer 1 con bootstrap -->
