--- a/pages/login.html
+++ b/pages/login.html
@@ -4,29 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Bootstrap -->
-
     <link
       rel="stylesheet"
       href="../assets/styles/css-bootstrap/bootstrap.min.css"
     />
+    <!-- Estilos -->
     <link rel="stylesheet" href="../assets/styles/login.css" />
-    <!--
-      <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    -->
+    <link rel="stylesheet" href="../assets/styles/styles.css" />
 
     <!-- Iconos de Bootrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-
-    <link rel="stylesheet" href="../assets/styles/styles.css" />
-
     <title>ShopiCaC - Login 🔑</title>
   </head>
 
@@ -180,26 +170,28 @@
         </ul>
       </div>
 
-      <!-- theme selector -->
+      <!-- formulario login -->
 
       <div class="form-contenedor-externo">
-        <form action="" method="POST" target="">
+        <form id="login-form" action="" method="" target="">
           <h2>Iniciar sesión</h2>
 
           <div class="form-contenedor-interno">
-            <div class="form-usuario">
+            <div class="form">
               <input
+                id="inputUsuario"
                 type="text"
-                class="formu-input"
-                name="usuario"
+                class="formu-input usuario-input"
+                name="inputUsuario"
                 placeholder="Usuario"
               />
             </div>
-            <div class="form-pass">
+            <div class="form">
               <input
+                id="inputContrasena"
                 type="text"
-                class="formu-input"
-                name="contrasena"
+                class="formu-input pass-input"
+                name="inputContrasena"
                 placeholder="Contraseña"
               />
             </div>
@@ -210,13 +202,15 @@
             ><a href="#">Olvidó la Contraseña?</a>
           </div>
 
-          <button type="submit" class="form-button">Iniciar sesión</button>
+          <button type="submit" class="login-button">Iniciar sesión</button>
+
           <div class="registro-link">
             <p>No tiene cuenta? <a href="#">Crear cuenta</a></p>
           </div>
         </form>
       </div>
     </main>
+
     <!-- footer 1 con bootstrap -->
     <footer
       id="footer"
