Corrijo visualizacion de logo

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,7 +33,7 @@
     <nav class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur">
       <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
         <figure class="my-0">
-          <img src="../assets/img/logo ShopiCaC.png" alt="Logo ShopiCaC" width="70" />
+          <img src="../assets/img/logo_ShopiCaC.png" alt="Logo ShopiCaC" width="70" />
           <figcaption class="text-white text-center">ShopiCaC</figcaption>
         </figure>
 
