--- a/pages/login.html
+++ b/pages/login.html
@@ -28,7 +28,7 @@
         <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
           <figure class="my-0">
             <img
-              src="../assets/img/logo ShopiCaC.png"
+              src="../assets/img/logo_ShopiCaC.png"
               alt="Logo ShopiCaC"
               width="70"
             />
