agrego boton volver en página detalles

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -183,8 +183,13 @@
         </ul>
       </div>
       <!-- theme selector -->
-      <div id="card-detalles" class="card mb-3">
+      <div id="card-detalles" class="card mb-3"></div>
 
+      <div class="">
+        <button id="botonVolver" class="btn btn-outline-danger">
+          <i class="bi bi-caret-left"></i>
+          Volver
+        </button>
       </div>
 
     </main>
