--- a/pages/login.html
+++ b/pages/login.html
@@ -21,57 +21,7 @@
   </head>
 
   <body>
-    <header>
-      <nav
-        class="fixed-top navbar navbar-expand-md navbar-dark bd-navbar bg-dark bg-gradient bg-opacity-75 bg-blur"
-      >
-        <div class="container-xxl d-flex flex-wrap flex-md-nowrap">
-          <figure class="my-0">
-            <img
-              src="../assets/img/logo_ShopiCaC.png"
-              alt="Logo ShopiCaC"
-              width="70"
-            />
-            <figcaption class="text-white text-center">ShopiCaC</figcaption>
-          </figure>
-
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#bdNavbar"
-            aria-controls="bdNavbar"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="bi bi-list"></i>
-          </button>
-
-          <!-- nav -->
-          <div class="collapse navbar-collapse" id="bdNavbar">
-            <hr class="d-md-none text-white-50" />
-
-            <ul class="navbar-nav barra-navegacion">
-              <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="../index.html">INICIO</a>
-              </li>
-
-              <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="./products.html">PRODUCTOS</a>
-              </li>
-
-              <li class="nav-item btn-width border-2">
-                <a class="nav-link" href="./contact.html">CONTACTO</a>
-              </li>
-
-              <li class="nav-item btn-width border-2">
-                <a class="nav-link active" href="#">LOGIN</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </header>
+    <header id="idheader"></header>
 
     <main>
       <!-- theme selector -->
@@ -213,28 +163,8 @@
 
     <!-- footer 1 con bootstrap -->
     <footer
-      id="footer"
-      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
-    >
-      <div class="container footer-container">
-        <div class="py-2">
-          <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Inicio</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Productos</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Contacto</a>
-            </li>
-            <li class="nav-item btn-width border-2">
-              <a href="#" class="nav-link px-2 text-white-50">Login</a>
-            </li>
-          </ul>
-          <p class="text-center text-white-50">© 2024 ShopiCaC, Inc</p>
-        </div>
-      </div>
+      id="idfooter"
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur">
     </footer>
     <!-- JS Bootstrap -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script> -->
@@ -242,5 +172,10 @@
 
     <script src="../assets/js/theme.js"></script>
     <script src="../assets/js/login.js"></script>
+
+    <!-- Script header -->
+    <script src="../assets/js/header.js"></script>
+    <!-- Script footer -->
+    <script src="../assets/js/footer.js"></script>
   </body>
 </html>
