se arregla btnArriba
se arregla btnArriba

--- a/pages/products.html
+++ b/pages/products.html
@@ -36,9 +36,10 @@
 
     <main class="container">
       <!-- boton ir arriba -->
-      <button class="btnScrollUp">
-        <a href="#header"><i class="fas fa-chevron-up btnArriba"></i></a>
-      </button>
+      <a href="#header" class="btnArriba"
+        ><i class="fa fa-chevron-up iconoArriba"></i
+      ></a>
+
       <!-- theme selector -->
       <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
         <symbol id="check2" viewBox="0 0 16 16">
@@ -204,7 +205,8 @@
     <!-- footer 1 con bootstrap -->
     <footer
       id="idfooter"
-      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"></footer>
+      class="footer-dark bd-footer bg-dark bg-gradient bg-opacity-75 bg-blur"
+    ></footer>
 
     <script type="module" src="../assets/js/productos.js"></script>
     <script src="../assets/js/theme.js"></script>
