Resuelvo errores de validacion html

--- a/pages/login.html
+++ b/pages/login.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="auto">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link
       rel="stylesheet"
       href="../assets/styles/css-bootstrap/bootstrap.min.css"
-    />
+    >
     <!-- Estilos -->
-    <link rel="stylesheet" href="../assets/styles/login.css" />
-    <link rel="stylesheet" href="../assets/styles/styles.css" />
+    <link rel="stylesheet" href="../assets/styles/login.css" >
+    <link rel="stylesheet" href="../assets/styles/styles.css" >
 
     <!-- Iconos de Bootrap -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
     <title>ShopiCaC - Login 🔑</title>
   </head>
 
@@ -123,7 +123,7 @@
       <!-- formulario login -->
 
       <div class="form-contenedor-externo">
-        <form id="login-form" action="" method="" target="">
+        <form id="login-form" method="POST" target=".com">
           <h2>Iniciar sesión</h2>
 
           <div class="form-contenedor-interno">
@@ -134,7 +134,7 @@
                 class="formu-input usuario-input"
                 name="inputUsuario"
                 placeholder="Usuario"
-              />
+              >
             </div>
             <div class="form">
               <input
@@ -143,12 +143,12 @@
                 class="formu-input pass-input"
                 name="inputContrasena"
                 placeholder="Contraseña"
-              />
+              >
             </div>
           </div>
           <div class="olvido-contrasena">
             <label
-              ><input type="checkbox" class="checkbox-input" /> Recordar</label
+              ><input type="checkbox" class="checkbox-input"> Recordar</label
             ><a href="#">Olvidó la Contraseña?</a>
           </div>
 
