--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="es" data-bs-theme="auto">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <!-- Bootstrap -->
 
     <link
       rel="stylesheet"
       href="../assets/styles/css-bootstrap/bootstrap.min.css"
-    />
+    >
     <link
       rel="shortcut icon"
       href="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/ShopiCaC.ico?alt=media&token=b78062e1-3676-434f-bd81-84ba55f11037"
       type="image/x-icon"
-    />
+    >
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,7 +25,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
-    />
+    >
 
     <link rel="stylesheet" href="../assets/styles/styles.css" />
 
@@ -43,7 +43,7 @@
               src="../assets/img/logo_ShopiCaC.png"
               alt="Logo ShopiCaC"
               width="70"
-            />
+            >
             <figcaption class="text-white text-center">ShopiCaC</figcaption>
           </figure>
 
@@ -61,9 +61,8 @@
 
           <!-- nav -->
           <div class="collapse navbar-collapse" id="bdNavbar">
-            <hr class="d-md-none text-white-50" />
+            <hr class="d-md-none text-white-50">
 
-            <ul class="navbar-nav barra-navegacion">
             <ul class="navbar-nav barra-navegacion">
               <li class="nav-item btn-width border-2">
                 <a class="nav-link" href="../index.html">INICIO</a>
