--- a/pages/products.html
+++ b/pages/products.html
@@ -198,6 +198,33 @@
 
       <h2>Todos nuestros Productos</h2>
       <article id="cards"></article>
+
+
+      <div class="toast-container position-fixed bottom-0 start-50 p-3">
+        <div
+          id="toast"
+          class="toast"
+          aria-live="assertive"
+          aria-atomic="true"
+        >
+          <div class="toast-header">
+            <!-- <img src="..." class="rounded me-2" alt="..." /> -->
+            <strong class="me-auto">ShopiCaC:</strong>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="toast"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="toast-body">Producto agregado al carrito</div>
+        </div>
+      </div>
+  
+
+
+
+
     </main>
 
     <!-- footer 1 -->
