--- a/pages/products.html
+++ b/pages/products.html
@@ -200,7 +200,7 @@
       <article id="cards"></article>
 
 
-      <div class="toast-container position-fixed bottom-0 start-50 p-3">
+      <div class="toast-container position-fixed top-50 end-0 p-3">
         <div
           id="toast"
           class="toast"
