--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,13 @@
       rel="stylesheet"
       href="../assets/styles/css-bootstrap/bootstrap.min.css"
     >
+
+    <link
+      rel="shortcut icon"
+      href="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/ShopiCaC.ico?alt=media&token=b78062e1-3676-434f-bd81-84ba55f11037"
+      type="image/x-icon"
+    >
+
     <!-- Estilos -->
     <link rel="stylesheet" href="../assets/styles/login.css" >
     <link rel="stylesheet" href="../assets/styles/styles.css" >
