--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="./assets/styles/css-bootstrap/bootstrap.min.css"
     >
 
+    <link
+      rel="shortcut icon"
+      href="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/ShopiCaC.ico?alt=media&token=b78062e1-3676-434f-bd81-84ba55f11037"
+      type="image/x-icon"
+    >
+    
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
