--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,6 +15,13 @@
         crossorigin="anonymous"
       /> -->
 
+  <link
+    rel="shortcut icon"
+    href="https://firebasestorage.googleapis.com/v0/b/miportfoliocab.appspot.com/o/ShopiCaC.ico?alt=media&token=b78062e1-3676-434f-bd81-84ba55f11037"
+    type="image/x-icon"
+  >
+
+
   <!-- Iconos de Bootrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
 
